# print-organizer

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
crates/sdf-baker/: Cargo.toml  README.md  TODO.md
crates/sdf-baker/examples/: debug_glsl.rs
crates/sdf-baker/shaders/: compute_template.glsl  compute_template.wgsl
crates/sdf-baker/src/: bricks_writer.rs  cli.rs  compute.rs  config.rs  genmesh_runner.rs  gpu.rs  lib.rs  main.rs  shader_compose.rs  types.rs
crates/sdf-baker/tests/: test_bricks_writer.rs  test_compute.rs  test_config.rs  test_e2e.rs  test_multi_brick.rs  test_schema.rs  test_shader.rs
docs/: hot-reload.md  plan.md  review-notes.md
docs/schemas/: bricks-index.v1.schema.json  manifest.v1.schema.json  project.v1.schema.json  report.v1.schema.json
docs/spec/: genmesh_v1.md  project-json.md
examples/csg/: csg.json  csg.wgsl
examples/csg-glsl/: csg-glsl.json  csg.glsl
examples/gyroid/: gyroid.json  gyroid.wgsl
examples/gyroid-glsl/: gyroid-glsl.json  gyroid.glsl
examples/linked-torus/: linked-torus.json  linked-torus.wgsl
examples/linked-torus-glsl/: linked-torus-glsl.json  linked-torus.glsl
examples/sphere/: sphere.json  sphere.wgsl
examples/sphere-glsl/: sphere-glsl.json  sphere.glsl
src/: app.rs  graphics.rs  main.rs  preview_compose.rs  shader.wgsl
src/app/: bake.rs  camera.rs  config_info.rs  mod.rs  renderer.rs  watcher.rs
src/graphics/: pipeline.rs  uniform.rs
src/shaders/: raymarch_template.glsl  raymarch_template.wgsl
tools/genmesh/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  vcpkg.json
tools/genmesh/include/genmesh/: bricks_data.h  bricks_index.h  cli.h  debug_generate.h  error_code.h  exit_code.h  log.h  manifest.h  mesher.h  output.h  report.h  vdb_builder.h
tools/genmesh/src/: bricks_data.cpp  bricks_index.cpp  cli.cpp  debug_generate.cpp  main.cpp  manifest.cpp  mesher.cpp  output.cpp  report.cpp  vdb_builder.cpp
tools/genmesh/tests/: test_bricks_data.cpp  test_bricks_index.cpp  test_cli.cpp  test_debug_generate.cpp  test_e2e.cpp  test_manifest.cpp  test_mesher.cpp  test_output.cpp  test_phase0.cpp  test_report.cpp  test_vdb_builder.cpp
tools/genmesh/tests/fixtures/: invalid_manifest_bad_dtype.json  invalid_manifest_no_dims.json  valid_bricks_index.json  valid_manifest.json
