[workspace]
members = ["crates/sdf-baker"]

[package]
name = "print-organizer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
bytemuck = { version = "1", features = ["derive"] }
eframe = { version = "0.33.3", features = ["wgpu"] }
sdf-baker = { path = "crates/sdf-baker" }
naga = { version = "27", features = ["glsl-in", "wgsl-in", "wgsl-out"] }
rfd = "0.15"
serde_json = "1"
opener = "0.8.4"
notify = "7"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
