[package]
name = "sdf-baker"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "27"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
naga = { version = "27", features = ["glsl-in", "wgsl-in", "wgsl-out"] }

[dev-dependencies]
tempfile = "3"
jsonschema = "0.44"
